--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  uni: Amherst
+  year: September, 2018 &mdash; May, 2020
   # awards:
-  # summary:
+  # summary: Very long, very difficult, very important!
